Added ability to get multiple items using scan, added endpoint to get all users with selected attributes
