# src/_common/nodejs/persistence/models/users.ts
@@ -16,6 +16,7 @@ export interface User {
 }
 
 export class UserModel extends Model {
+  public get_all = (attributes?: string[]) => this.driver.scan_table<User>('user', false, attributes);
   public get = (id: string) => this.driver.get_item<User>('user', id);
   public put = (user: User) => this.driver.put_item('user', user);
 }
